--- a/portfolio.css
+++ b/portfolio.css
@@ -38,3 +38,11 @@
 .folio-box p {
 
 }
+
+
+@media only screen and (max-width: 767px) {
+	.folio-box a img{
+		width: 100px;
+		height: 100px;
+	}
+}
